# src/validation/contacts.js
@@ -4,14 +4,16 @@ export const createContactSchema = Joi.object({
   name: Joi.string().min(3).max(20).required(),
   phoneNumber: Joi.string().min(3).max(20).required(),
   email: Joi.string().email(),
-  isFavourite: Joi.boolean(),
+  isFavourite: Joi.valid('false', 'true').default(false),
   contactType: Joi.string().valid('work', 'home', 'personal').required(),
+  photo: Joi.string(),
 });
 
 export const updateContactSchema = Joi.object({
   name: Joi.string().min(3).max(20),
   phoneNumber: Joi.string().min(3).max(20),
   email: Joi.string().email(),
-  isFavourite: Joi.boolean(),
+  isFavourite: Joi.valid('false', 'true').default(false),
   contactType: Joi.string().valid('work', 'home', 'personal'),
+  photo: Joi.string(),
 });
